// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the Toast Component correctly 1`] = `
<div
  className="sc-VigVT gEggXm sc-gZMcBi kiNSap"
>
  <div
    className="sc-jTzLTM cIqDPQ sc-gZMcBi geCnFd"
    color="success"
  >
    <i
      className="material-icons  sc-iwsKbI fqFUGe"
      color="white"
      onClick={undefined}
      scale="l"
    >
      check_circle
    </i>
  </div>
  <div
    className="sc-fjdhpX gjUKMb sc-gZMcBi dMgmPi"
  >
    Text
  </div>
  <div
    className="sc-jzJRlG gMTKEy sc-gZMcBi cwLibs"
  >
    <div
      className="sc-cSHVUG dcIrb"
    >
      <i
        className="material-icons  sc-iwsKbI dqIynK"
        color={undefined}
        onClick={[Function]}
        scale={undefined}
      >
        close
      </i>
    </div>
  </div>
</div>
`;

exports[`renders the Toast Component correctly 2`] = `
<div
  className="sc-VigVT gEggXm sc-gZMcBi kiNSap"
>
  <div
    className="sc-jTzLTM jGbBoD sc-gZMcBi geCnFd"
    color="error"
  >
    <i
      className="material-icons  sc-iwsKbI fqFUGe"
      color="white"
      onClick={undefined}
      scale="l"
    >
      error_outline
    </i>
  </div>
  <div
    className="sc-fjdhpX gjUKMb sc-gZMcBi dMgmPi"
  >
    <button>
      Test
    </button>
  </div>
  <div
    className="sc-jzJRlG gMTKEy sc-gZMcBi cwLibs"
  >
    <div
      className="sc-cSHVUG dcIrb"
    >
      <i
        className="material-icons  sc-iwsKbI dqIynK"
        color={undefined}
        onClick={[Function]}
        scale={undefined}
      >
        close
      </i>
    </div>
  </div>
</div>
`;
